small bug in CorpuMa